[project]
      name = "adversarial-rl-feature-selection"
      version = "1.0.0"
      description = "Paper-faithful imposter-feature detection using entropy, joint entropy, and KL divergence."
      requires-python = ">=3.12,<3.13"
      dependencies = [
        "gymnasium[classic-control]>=1.0",
"matplotlib>=3.9",
"numpy>=2.0",
"pandas>=2.2",
"pyarrow>=17",
"scikit-learn>=1.5",
"scipy>=1.14",
      ]

      [dependency-groups]
      dev = ["pytest>=8.3", "ruff>=0.9", "mypy>=1.11"]

      [tool.pytest.ini_options]
      pythonpath = ["src"]
      testpaths = ["tests"]

      [tool.ruff]
      line-length = 100
      target-version = "py312"

      [tool.mypy]
      python_version = "3.12"
      mypy_path = "src"
      files = ["src"]
      ignore_missing_imports = true
